--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
 <div class="flex flex-row justify-center items-center w-full h-full">
-  <img src="assets/welcome.gif" class="h-1/2">
-  <h1 class="text-4xl">Welcome Back <span class="text-red-600 font-bold ">{{username}}</span>, it's time to workout !</h1>
+  <img src="assets/welcome.gif" class="h-1/2" alt="welcome-gif">
+  <h1 >Welcome Back <span class="text-red-600 font-bold ">{{username}}</span>, it's time to workout !</h1>
 </div>
